# shaboom-app

./: README.md  Readme.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/jnidemo/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  NDKExtractor.cpp  NDKExtractor.h  inputStreamManaging.cpp  jni_bridge.cpp  outputStreamManaging.cpp  streamManaging.cpp
app/src/main/java/com/example/jnidemo/: MainActivity.kt  ReplotTask.kt  ShaBoomApi.kt  SongActivity.kt  SongChoosingActivity.kt  StreamManager.kt
app/src/main/jni/: model_builder.h
app/src/main/jni/c/: c_api.h  c_api_experimental.h  c_api_types.h  common.h
app/src/main/res/drawable/: ic_plus_1.xml  minus.xml  roundstyle_small.xml
app/src/main/res/layout/: activity_main.xml  activity_song.xml  activity_song_choosing.xml  song_list_elem.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/jnidemo/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
